Much of the functionality has been implimented for text view. Fixes boxplot rendering with cached data.

--- a/classroom/src/app/boxplot-graph/boxplot-graph.component.html
+++ b/classroom/src/app/boxplot-graph/boxplot-graph.component.html
@@ -2,6 +2,5 @@
   <g [ngClass]="{'boxplot_wait':true}">
     <text y="50%">Please wait, loading...</text>
   </g>
-  <g [ngClass]="{'boxplot_axis':true}"></g>
-  <g [ngClass]="{'boxplot_data':true}"></g>
+  <g class="boxplot_data"></g>
 </svg>
