--- a/classroom/src/app/rank-graph/rank-graph.component.html
+++ b/classroom/src/app/rank-graph/rank-graph.component.html
@@ -1,4 +1,6 @@
 <svg class="rank_graph">
-  <g class="rank_wait"></g>
+  <g class="rank_wait">
+    <!--<text y="50%" x="20">Loading, please wait...</text>-->
+  </g>
   <g class="rank_data"></g>
 </svg>
