--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -1,3 +1,4 @@
+<app-nav></app-nav>
 <div *ngIf="corpus">
   <h2>{{corpus.course}} - {{corpus.assignment}} Grouping</h2>
   <p>Use this tool to automatically assign students to groups.</p>
