--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -1,3 +1,4 @@
+<app-nav></app-nav>
 <div *ngIf="corpus">
   <h2>{{corpus.course}} - {{corpus.assignment}} Rankings</h2>
   <div *ngIf="categories">
@@ -8,7 +9,7 @@
       </select>
     </aside>
     <article>
-      <app-rank-graph [rank_data]="data"></app-rank-graph>
+      <app-rank-graph [rank_data]="data" [max_value]="max_value"></app-rank-graph>
     </article>
   </div>
 </div>
