--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div *ngIf="corpus">
+<div *ngIf="corpus" class="rank_container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Rankings</h2>
   <div *ngIf="categories">
     <aside>
