--- a/classroom/src/app/scatterplot/scatterplot.component.html
+++ b/classroom/src/app/scatterplot/scatterplot.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div *ngIf="corpus">
+<div *ngIf="corpus" class="container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Scatter Plot</h2>
   <div *ngIf="categories" class="scatter_container">
     <aside class="aside aside-y">
