--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -1,9 +1,16 @@
 <app-nav></app-nav>
-<div *ngIf="corpus">
+<div *ngIf="corpus" class="container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Grouping</h2>
   <p>Use this tool to automatically assign students to groups.</p>
-  <div *ngFor="let n of group_sizes">
-    <label><input type="radio" value="{{n}}" [(ngModel)]="group_size">{{n}}</label>
+  <div class="group_size_box">
+    <div *ngFor="let n of group_sizes">
+      <label><input type="radio" [value]="n" [(ngModel)]="group_size">{{n}}</label>
+    </div>
+  </div>
+  <div class="roster">
+    <h2>Roster</h2>
+    <div *ngFor="let s of students">
+      <label><input type="checkbox" [value]="s[0]" [(ngModel)]="s[1]">{{s[0]}}</label>
   </div>
   <button (click)="generate_groups(event$)">Group Students</button>
   <div *ngIf="groups">
