--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -1,30 +1,32 @@
 <div *ngIf="tagged_text">
   <div class="text_view_container">
     <aside class="clusters">
-      <div class="md-toolbar-tools">
-        <h3>Dictionary Categories</h3>
-      </div>
+      <h3 class="header">Dictionary Categories</h3>
       <div *ngFor="let c of clusters;">
         <label><input class="ds-stv-category" type="checkbox" [value]="c" (change)="toggle_category($event)">{{c}}</label>
       </div>
     </aside>
     <article class="text_view">
-      <h2>{{tagged_text.text_id}}</h2>
-      <div [innerHTML]="html_content" (click)="click_select($event)"
-           ></div>
+      <h3 class="header">ID: {{tagged_text.text_id}}</h3>
+      <div class="text_content" [innerHTML]="html_content" (click)="click_select($event)"></div>
     </article>
     <aside class="details">
       <div class="pattern">
-        <h3>Selected Pattern</h3>
-        <div>{{selection}}</div>
-        <ul>
+        <h3 class="header">Selected Pattern</h3>
+        <div class="selection">{{selection}}</div>
+        <div class="selection_table">
+          <div class="selection_row"><div class="selection_label">LAT</div><div class="selection_data">{{selected_lat}}</div></div>
+          <div class="selection_row"><div class="selection_label">Dimension</div><div class="selection_data">{{selected_dimension}}</div></div>
+          <div class="selection_row"><div class="selection_label">Cluster</div><div class="selection_data">{{selected_cluster}}</div></div>
+        </div>
+        <!--<ul>
           <li>LAT = {{selected_lat}}</li>
           <li>Dimension = {{selected_dimension}}</li>
           <li>Cluster = {{selected_cluster}}</li>
-        </ul>
+        </ul>-->
       </div>
       <div class="info">
-        <h3>Text Information</h3>
+        <h3 class="header">Text Information</h3>
         <p>Word Count = {{tagged_text.word_count}}</p>
       </div>
     </aside>
