Adds loading spinners. Adds scatterplot dot mouseover and click handlers. Adds rank graph item click handler to open stv.

--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
+<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Loading...</span></ngx-spinner>
 <div *ngIf="corpus" class="container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Grouping</h2>
   <p>Use this tool to automatically assign students to groups.</p>
