--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
+<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Loading...</span></ngx-spinner>
 <div *ngIf="corpus" class="rank_container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Rankings</h2>
   <div *ngIf="categories">
