--- a/classroom/src/app/report/report.component.html
+++ b/classroom/src/app/report/report.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
+<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Generating Reports...</span></ngx-spinner>
 <div *ngIf="corpus" class="container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Reports</h2>
   <div>
