--- a/classroom/src/app/scatterplot-graph/scatterplot-graph.component.html
+++ b/classroom/src/app/scatterplot-graph/scatterplot-graph.component.html
@@ -1,3 +1,4 @@
+<div class="tooltip" style="opacity: 0;"></div>
 <svg [ngClass]="{'scatterplot':true}" [attr.width]="_options.width" [attr.height]="_options.height">
   <g [ngClass]="{'scatterplot_wait':true}">
     <text y="50%">Please wait, loading...</text>
