--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Loading...</span></ngx-spinner>
 <div *ngIf="tagged_text">
   <div class="text_view_container">
     <aside class="clusters">
