--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
+<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Loading...</span></ngx-spinner>
 <div *ngIf="corpus" class="boxplot_container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Box Plot</h2>
   <div class="graph_container">
