Fixes various compiler errors for production environment.

--- a/classroom/src/app/boxplot-graph/boxplot-graph.component.html
+++ b/classroom/src/app/boxplot-graph/boxplot-graph.component.html
@@ -1,4 +1,4 @@
-<svg [ngClass]="{'boxplot':true}" [attr.width]="_options.width" [attr.height]="_options.height">
+<svg [ngClass]="{'boxplot':true}" [attr.width]="options.width" [attr.height]="options.height">
   <g [ngClass]="{'boxplot_wait':true}">
     <text y="50%">Please wait, loading...</text>
   </g>
