--- a/classroom/src/app/modal/modal.component.html
+++ b/classroom/src/app/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div class="jw-modal">
   <div class="jw-modal-body">
     <ng-content></ng-content>
-    <button (click)="close($event)">Close</button>
+    <button (click)="close()">Close</button>
   </div>
 </div>
 <div class="jw-modal-background"></div>
