--- a/classroom/src/app/app.component.html
+++ b/classroom/src/app/app.component.html
@@ -7,3 +7,4 @@
 <app-modal id="about-modal">
   <h1>DocuScope Project</h1>
   <p>DocuScope is a text analysis environment with a suite of interactive visualization tools for corpus-based rhetorical analysis. The DocuScope Project began in 1998 as a result of collaboration between David Kaufer and Suguru Ishizaki at Carnegie Mellon University. David created what we call the generic (default) dictionary, consisting of over 40 million linguistic patterns of English classified into over 100 categories of rhetorical effects. Suguru designed and implemented the analysis and visualization software, which can annotate a corpus of text against any dictionary of regular strings that are classified into a hierarchy of rhetorical effects. While we designed DocuScope as a tool for rhetorical analysis, we also found that it was extremely effective for developing the dictionary in a systematic fashion.</p>
+</app-modal>
