--- a/classroom/src/app/report/report.component.html
+++ b/classroom/src/app/report/report.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Generating Reports...</span></ngx-spinner>
+<!-- TODO: spinner for "Generating Reports..."? -->
 <div *ngIf="corpus" class="container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Reports</h2>
   <div>
