--- a/classroom/src/app/app.component.css
+++ b/classroom/src/app/app.component.css
@@ -1,8 +1,3 @@
-/*h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}*/
 /* AppComponent's private CSS styles */
 .title-banner {
   background-color: rgb(255,87,34);
@@ -25,8 +20,13 @@
 .pointer {
   cursor: pointer;
 }
-h1 {
-  /*font-size: 1.2em;
-  color: #EEE;
-  margin-bottom: 0;*/
+span.spinner_text {
+  font-size: 20px;
+  color: white;
+}
+h1.dialog {
+  text-align: center;
+}
+p.dialog {
+  padding: 10px;
 }
