--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -1,5 +1,4 @@
 <app-nav></app-nav>
-<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Loading...</span></ngx-spinner>
 <div *ngIf="corpus" class="container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Grouping</h2>
   <p>Use this tool to automatically assign students to groups.</p>
@@ -14,12 +13,12 @@
       <label><input type="checkbox" [value]="s[0]" [(ngModel)]="s[1]">{{s[0]}}</label>
   </div>
   <button (click)="generate_groups(event$)">Group Students</button>
-  <div *ngIf="groups">
-    <h3>Groups:</h3>
+  <ng-container *ngIf="groups">
+    <h3>Groups:</h3><!-- potentially use eui-datalist -->
     <div class="groups_container">
       <div class="group" *ngFor="let group of groups.groups">
         <div class="group_member" *ngFor="let ind of group">{{ind}}</div>
       </div>
     </div>
-  </div>
+  </ng-container>
 </div>
