--- a/classroom/src/app/text-view/text-view.component.css
+++ b/classroom/src/app/text-view/text-view.component.css
@@ -1,9 +1,22 @@
-.text_view_container {
-  display: flex;
-  flex-direction: row;
+.container {
+  width: 100%;
   height: calc(100vh - 64.5px);
 }
 
+.layout {
+  width: 100%;
+  height: calc(100vh - 64.5px);
+}
+article {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.categories {
+  width: 20ch;
+  min-width: 18ch;
+}
+/*
 .header {
   background: #9F9F9F;
   color: white;
@@ -12,29 +25,7 @@
   margin-top: 0px;
   margin-bottom: 3px;
 }
-.clusters {
-  border: 1px solid lightgray;
-  flex: 0 0 24ch;
-  background: #F1F1F1;
-}
-
-.text_view {
-  border: 1px solid lightgray;
-  display: flex;
-  flex-direction: column;
-  /*flex: 2 2 auto;*/
-}
-.text_content {
-  overflow-y: scroll;
-  padding: 2em;
-  height: 100%;
-}
-
-.details {
-  border: 1px solid lightgray;
-  flex: 0 0 300px;
-  background: #F1F1F1;
-}
+*/
 .selection {
   font-weight: bold;
   font-size: 80%;
@@ -45,21 +36,24 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  width: 30ch;
   margin-left: 3px;
   margin-right: 3px;
   margin-top: 3px;
-  margin-bottom: 1.2em;
+  margin-bottom: 5px;
 }
 .selection_row {
   display: flex;
   flex-direction: row;
 }
 .selection_label {
+  font-weight: bold;
   width: 10ch;
   flex: none;
 }
 .selection_data {
   flex: 0 1 auto;
   overflow-x: auto;
+}
+.text_info {
+  padding: 4px;
 }
