--- a/classroom/src/styles.css
+++ b/classroom/src/styles.css
@@ -1,17 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
+/* easy-ui */
+@import '~ng-easyui/themes/material/easyui.css';
+@import '~ng-easyui/themes/angular.css';
+@import '~ng-easyui/themes/icon.css';
+
+
 body {
   /*box-sizing: border-box;*/
   margin: 0;
-}
-body.jw-modal-open {
-  /* body overflow is hidden to hide main scrollbar when modal window is open */
-  overflow: hidden;
-}
-app-modal {
-  /* modals are hidden by default */
-  display: none;
 }
 
 .cluster_default {
