Gets documents from query parameters.

--- a/classroom/src/app/corpus-detail/corpus-detail.component.html
+++ b/classroom/src/app/corpus-detail/corpus-detail.component.html
@@ -1,10 +1,10 @@
 <app-nav></app-nav>
 <div *ngIf="corpus" class="container">
   <h2>{{corpus.course}} - {{corpus.assignment}} Details</h2>
-  <div>
+  <!--<div>
     <label for="ds_dict">DocuScope Dictionary:</label>
     <span id="ds_dict">{{corpus.ds_dictionary}}</span>
-  </div>
+  </div>-->
   <div>
     <h3>Documents:</h3>
     <div *ngFor="let d of corpus.documents">
