--- a/classroom/src/app/nav/nav.component.html
+++ b/classroom/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <eui-linkbutton [selected]="is_current('/corpus')"
+  <!--<eui-linkbutton [selected]="is_current('/corpus')"
                   [title]="'Go to corpus details.'"
-                  routerLink="/corpus">Corpus</eui-linkbutton>
+                  routerLink="/corpus">Corpus</eui-linkbutton>-->
   <eui-linkbutton [selected]="is_current('/boxplot')"
                   [title]="'Go to Box Plot display.'"
                   routerLink="/boxplot">Box Plot</eui-linkbutton>
