--- a/classroom/src/app/rank-graph/rank-graph.component.html
+++ b/classroom/src/app/rank-graph/rank-graph.component.html
@@ -6,7 +6,7 @@
   </eui-grid-column>
   <eui-grid-column field="text" title="Student" width="10ch">
     <ng-template euiCellTemplate let-row>
-      <span><a (click)="open('stv/'+row.text)" [style.cursor]="pointer">{{row.text.slice(0,8)}}</a></span>
+      <span><a (click)="open('stv/'+row.index)" [style.cursor]="pointer">{{row.text}}</a></span>
     </ng-template>
   </eui-grid-column>
   <eui-grid-column field="value" title="Value" width="6ch">
