Takes out Class and Assignment identifiers from titles to prevent confusion until those can be properly passed in. Addresses #5

--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -1,6 +1,7 @@
 <app-nav></app-nav>
 <div *ngIf="corpus" class="boxplot_container">
-  <h2>{{corpus.course}} - {{corpus.assignment}} Box Plot</h2>
+  <!--<h2>\{\{corpus.course\}\} - \{\{corpus.assignment\}\} Box Plot</h2>-->
+  <h2>Box Plot</h2>
   <div class="graph_container">
     <app-boxplot-graph [boxplot]="data" [max_value]="max_value" (selected_category)="onSelectCategory($event)"></app-boxplot-graph>
     <app-rank-graph [rank_data]="rank_data" [max_value]="max_value"></app-rank-graph>
