--- a/classroom/src/app/report/report.component.html
+++ b/classroom/src/app/report/report.component.html
@@ -1,7 +1,8 @@
 <app-nav></app-nav>
 <!-- TODO: spinner for "Generating Reports..."? -->
 <div *ngIf="corpus" class="container">
-  <h2>{{corpus.course}} - {{corpus.assignment}} Reports</h2>
+  <!--<h2>\{\{corpus.course\}\} - \{\{corpus.assignment\}\} Reports</h2>-->
+  <h2>Reports</h2>
   <div>
     <h3>Introduction Text:</h3>
     <p>Customize the introductory text used in the report:</p>
