--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -1,6 +1,7 @@
 <app-nav></app-nav>
 <div *ngIf="corpus" class="rank_container">
-  <h2>{{corpus.course}} - {{corpus.assignment}} Rankings</h2>
+  <!--<h2>\{\{corpus.course\}\} - \{\{corpus.assignment\}\} Rankings</h2>-->
+  <h2>Rankings</h2>
   <ng-container *ngIf="categories">
     <aside>
       <label for="select_category">Category:</label>
