Adds student vs model differentiation, still needs better styling.

--- a/classroom/src/app/boxplot-graph/boxplot-graph.component.html
+++ b/classroom/src/app/boxplot-graph/boxplot-graph.component.html
@@ -57,6 +57,7 @@
               [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
               [style.stroke]="'#3c3c3c'"
               [style.stroke-width]="1"/>
+        <!-- TODO: add outliers -->
       </svg>
       </div>
     </ng-template>
