--- a/classroom/src/app/nav/nav.component.html
+++ b/classroom/src/app/nav/nav.component.html
@@ -4,17 +4,24 @@
                   routerLink="/corpus">Corpus</eui-linkbutton>-->
   <eui-linkbutton [selected]="is_current('/boxplot')"
                   [title]="'Go to Box Plot display.'"
-                  routerLink="/boxplot">Box Plot</eui-linkbutton>
+                  [routerLink]="['/boxplot']"
+                  queryParamsHandling="preserve">Box Plot</eui-linkbutton>
   <eui-linkbutton [selected]="is_current('/ranking')"
                   [title]="'Go to rankings list.'"
-                  routerLink="/ranking">Rankings</eui-linkbutton>
+                  routerLink="/ranking"
+                  queryParamsHandling="preserve">Rankings</eui-linkbutton>
   <eui-linkbutton [selected]="is_current('/scatterplot')"
                   [title]="'Go to scatter plot display.'"
-                  routerLink="/scatterplot">Scatter Plot</eui-linkbutton>
-  <eui-linkbutton [selected]="is_current('/grouping')"
+                  routerLink="/scatterplot"
+                  queryParamsHandling="preserve">Scatter Plot</eui-linkbutton>
+  <eui-linkbutton *ngIf="is_instructor()"
+                  [selected]="is_current('/grouping')"
                   [title]="'Go to group generator.'"
-                  routerLink="/grouping">Groups</eui-linkbutton>
-  <eui-linkbutton [selected]="is_current('/report')"
+                  routerLink="/grouping"
+                  queryParamsHandling="preserve">Groups</eui-linkbutton>
+  <eui-linkbutton *ngIf="is_instructor()"
+                  [selected]="is_current('/report')"
                   [title]="'Go to report generator.'"
-                  routerLink="/report">Reports</eui-linkbutton>
+                  routerLink="/report"
+                  queryParamsHandling="preserve">Reports</eui-linkbutton>
 </nav>
