Improves instructor check for #14

--- a/classroom/src/app/nav/nav.component.html
+++ b/classroom/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
                   routerLink="/corpus">Corpus</eui-linkbutton>-->
   <eui-linkbutton [selected]="is_current('/boxplot')"
                   [title]="'Go to Box Plot display.'"
-                  [routerLink]="['/boxplot']"
+                  routerLink="/boxplot"
                   queryParamsHandling="preserve">Box Plot</eui-linkbutton>
   <eui-linkbutton [selected]="is_current('/ranking')"
                   [title]="'Go to rankings list.'"
