--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -30,13 +30,16 @@
         <aside class="text_info">Word Count = {{tagged_text.word_count}}</aside>
       </eui-panel>-->
       <eui-panel title="Patterns Used" collapsible="true">
-        <eui-accordion [multiple]="true" *ngIf="patterns">
+        <eui-accordion [multiple]="true" *ngIf="patterns" [animate]="true"
+                       [class]="'patterns'">
           <eui-accordion-panel *ngFor="let clust of patterns.keys()"
                                [title]="get_cluster_info(clust).name"
                                collapsible="true">
-            <p *ngIf="get_cluster_info(clust)">
-              {{get_cluster_info(clust).description}}
-            </p>
+            <details *ngIf="get_cluster_info(clust)">
+              <summary>{{get_cluster_info(clust).description.slice(0,26)}}
+                <span *ngIf="get_cluster_info(clust).description.length>26">...</span></summary>
+              <p>{{get_cluster_info(clust).description}}</p>
+            </details>
 
             <ul>
               <li *ngFor="let pattern of patterns.get(clust).entries()">
