--- a/classroom/src/app/boxplot-graph/boxplot-graph.component.html
+++ b/classroom/src/app/boxplot-graph/boxplot-graph.component.html
@@ -20,45 +20,62 @@
     </ng-template>
     <ng-template euiCellTemplate let-row>
       <div euiTooltip="Min={{percent(row.min)}};  Q1={{percent(row.q1)}};  Mean={{percent(row.q2)}};  Q3={{percent(row.q3)}};  Max={{percent(row.max)}}">
-      <svg class="box_plot_item" [attr.width]="'300px'" [attr.height]="'30px'"
-           [attr.data-min]="row.min" [attr.data-max]="row.max"
-           [attr.data-q1]="row.q1" [attr.data-q2]="row.q1" [attr.data-q3]="row.q3">
-        <desc>A box plot where the minimum is {{percent(row.min)}},
-          the first quantile is {{percent(row.q1)}},
-          the mean is {{percent(row.q2)}},
-          the third quantile is {{percent(row.q3)}},
-          and the maximum is {{percent(row.max)}}.
-        </desc>
-        <!-- Base line -->
-        <line [attr.x1]="scale_x(row.min)" [attr.x2]="scale_x(row.max)"
-              [attr.y1]="scale_y(0.5)" [attr.y2]="scale_y(0.5)"
-              [style.stroke]="'#3c3c3c'"
-              [style.stroke-width]="'1px'"/>
-        <!-- Q1 to Q3 -->
-        <rect [attr.x]="scale_x(row.q1)"
-              [attr.y]="scale_y(0.1)"
-              [attr.height]="scale_y(0.9)-scale_y(0.1)"
-              [attr.width]="scale_x(row.q3) - scale_x(row.q1)"
-              [attr.fill]="'#EEEEEE'"
-              [attr.stroke]="'#3C3C3C'"
-              [attr.stroke-width]="1"/>
-        <!-- Mean -->
-        <line [attr.x1]="scale_x(row.q2)" [attr.x2]="scale_x(row.q2)"
-              [attr.y1]="scale_y(0.1)" [attr.y2]="scale_y(0.9)"
-              [style.stroke]="'#3c3c3c'"
-              [style.stroke-width]="1"/>
-        <!-- Minimum -->
-        <line [attr.x1]="scale_x(row.min)" [attr.x2]="scale_x(row.min)"
+        <svg class="box_plot_item" [attr.width]="'300px'" [attr.height]="'30px'"
+             [attr.data-min]="row.lifence" [attr.data-max]="row.uifence"
+             [attr.data-q1]="row.q1" [attr.data-q2]="row.q1" [attr.data-q3]="row.q3">
+          <desc>A box plot where the minimum is {{percent(row.lifence)}},
+            the first quantile is {{percent(row.q1)}},
+            the mean is {{percent(row.q2)}},
+            the third quantile is {{percent(row.q3)}},
+            and the maximum is {{percent(row.uifence)}}.
+          </desc>
+          <!-- Base line -->
+          <line [attr.x1]="scale_x(row.lifence)" [attr.x2]="scale_x(row.uifence)"
+                [attr.y1]="scale_y(0.5)" [attr.y2]="scale_y(0.5)"
+                [style.stroke]="'#3c3c3c'"
+                [style.stroke-width]="'1px'"/>
+          <!-- Q1 to Q3 -->
+          <rect [attr.x]="scale_x(row.q1)"
+                [attr.y]="scale_y(0.1)"
+                [attr.height]="scale_y(0.9)-scale_y(0.1)"
+                [attr.width]="scale_x(row.q3) - scale_x(row.q1)"
+                [attr.fill]="'#EEEEEE'"
+                [attr.stroke]="'#3C3C3C'"
+                [attr.stroke-width]="1"/>
+          <!-- Mean -->
+          <line [attr.x1]="scale_x(row.q2)" [attr.x2]="scale_x(row.q2)"
+                [attr.y1]="scale_y(0.1)" [attr.y2]="scale_y(0.9)"
+                [style.stroke]="'#3c3c3c'"
+                [style.stroke-width]="1"/>
+          <!-- Minimum -->
+          <line [attr.x1]="scale_x(row.lifence)" [attr.x2]="scale_x(row.lifence)"
+                [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
+                [style.stroke]="'#3c3c3c'"
+                [style.stroke-width]="1"/>
+          <!-- Maximum -->
+          <line [attr.x1]="scale_x(row.uifence)" [attr.x2]="scale_x(row.uifence)"
+                [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
+                [style.stroke]="'#3c3c3c'"
+                [style.stroke-width]="1"/>
+          <!-- Minimum -->
+          <!--<line [attr.x1]="scale_x(row.min)" [attr.x2]="scale_x(row.min)"
               [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
-              [style.stroke]="'#3c3c3c'"
-              [style.stroke-width]="1"/>
-        <!-- Maximum -->
-        <line [attr.x1]="scale_x(row.max)" [attr.x2]="scale_x(row.max)"
+              [style.stroke]="'pink'"
+              [style.stroke-width]="1"/>-->
+          <!-- Maximum -->
+          <!--<line [attr.x1]="scale_x(row.max)" [attr.x2]="scale_x(row.max)"
               [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
-              [style.stroke]="'#3c3c3c'"
-              [style.stroke-width]="1"/>
-        <!-- TODO: add outliers -->
-      </svg>
+              [style.stroke]="'pink'"
+              [style.stroke-width]="1"/>-->
+          <g>
+            <a (click)="open('stv/'+out.pointtitle)"
+               *ngFor="let out of get_outliers(row.category)">
+              <circle [attr.cx]="scale_x(out.value)" [attr.cy]="scale_y(0.5)"
+                      [attr.r]="scale_y(0.1)" [style.fill]="'#52be80'"
+                      [style.stroke-width]="1" [style.stroke]="'#eeeeee'"/>
+            </a>
+          </g>
+        </svg>
       </div>
     </ng-template>
   </eui-grid-column>
