Improves classroom tests so that everything passes. The tests still need to be greatly improved to increase coverage.

--- a/classroom/src/app/app.component.html
+++ b/classroom/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Title Banner -->
 <div class="title-banner">
-  <h3>{{ title }}</h3>
+  <h3 class="title-banner-title">{{ title }}</h3>
   <i (click)="about_modal.open()" class="material-icons pointer">info</i>
 </div>
 <!-- Loading screen cover -->
