--- a/classroom/src/app/messages/messages.component.html
+++ b/classroom/src/app/messages/messages.component.html
@@ -2,5 +2,14 @@
   <h2>Messages</h2>
   <button class="clear"
           (click)="messageService.clear()">Clear</button>
-  <div *ngFor="let message of messageService.messages">{{message}}</div>
+  <br>
+  <ol>
+    <li *ngFor="let message of messageService.messages">{{message}}</li>
+  </ol>
 </div>
+
+<!--
+Copyright Google LLC. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+-->
